EKS-Terraform/kubernetes/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: node-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels: 
        app: frontend
    spec:
      containers:
      - name: frontend
        image: abdulwahabmsalih/frontenduser:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: node-app
spec:
  selector:
    app: frontend 
  ports:
  - port: 80
    targetPort: 80
